fix: skills responsivity on mobile views redesigned skills items

--- a/src/styles/__variables.scss
+++ b/src/styles/__variables.scss
@@ -1,8 +1,8 @@
 
 // colors
-$primary-color: hsl(0, 0%, 23%);
-$secondary-color: hsl(216, 43%, 42%);
-$terciary-color: hsl(0, 4%, 95%);
+$primary-color: #3b3b3b;
+$secondary-color: #3d6299;
+$terciary-color: #f2f2f2;
 
 $primary-font-color: hsl(0, 4%, 95%);
 $secondary-font-color: hsl(0, 5%, 25%);
